objects/Account_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Num_of_Categories__c</fullName>
        <label># of Categories</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Orders_Since_Start__c</fullName>
        <label># of Orders Since Start</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Categories_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label># of Categories Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Orders_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label># of Orders Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number of Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <label>Number of Sites</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMXIsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OMXIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMX_Account__c</fullName>
        <description>Is this an existing OMX account?</description>
        <inlineHelpText>Is this an existing OMX account?</inlineHelpText>
        <label>Is this an existing OMX account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMX_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OMX Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMX_GPO__c</fullName>
        <label>OMX GPO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICA SAVES</fullName>
                </value>
                <value>
                    <fullName>AMERINET GPO</fullName>
                </value>
                <value>
                    <fullName>CONEXT</fullName>
                </value>
                <value>
                    <fullName>CORPORATE UNITED</fullName>
                </value>
                <value>
                    <fullName>COST CONTAINMENT 2</fullName>
                </value>
                <value>
                    <fullName>E AND I COOPERATIVE2</fullName>
                </value>
                <value>
                    <fullName>FORUM GPO</fullName>
                </value>
                <value>
                    <fullName>GENERAL HEALTHCARE 2</fullName>
                </value>
                <value>
                    <fullName>GUY BROWN</fullName>
                </value>
                <value>
                    <fullName>HCA</fullName>
                </value>
                <value>
                    <fullName>HEALTHTRUST HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>INSIGHT SOURCING REPORTING</fullName>
                </value>
                <value>
                    <fullName>MEDASSETS SUPER 2</fullName>
                </value>
                <value>
                    <fullName>MEDBIZ HPR GPO</fullName>
                </value>
                <value>
                    <fullName>MEDIA CONSORTIUM 2</fullName>
                </value>
                <value>
                    <fullName>MHA GPO</fullName>
                </value>
                <value>
                    <fullName>NOVATION GPO</fullName>
                </value>
                <value>
                    <fullName>NOVATION GUY BROWN 2</fullName>
                </value>
                <value>
                    <fullName>PANTELLOS</fullName>
                </value>
                <value>
                    <fullName>PREMIER GPO</fullName>
                </value>
                <value>
                    <fullName>ROI GPO</fullName>
                </value>
                <value>
                    <fullName>SOURCING OFFICE</fullName>
                </value>
                <value>
                    <fullName>STATE OF TEXAS</fullName>
                </value>
                <value>
                    <fullName>TIER ONE NON-GB</fullName>
                </value>
                <value>
                    <fullName>WSCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMX_Mainframe_Account_Level__c</fullName>
        <description>the legacy officemax account hierarchy: CS,CU,NA</description>
        <label>OMX Mainframe Account Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site/Consignee</fullName>
                </value>
                <value>
                    <fullName>Main Account</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Super National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMX_Mainframe_Account_Number__c</fullName>
        <description>Account # for main accounts from OfficeMax Mainframe. Field: n_cust</description>
        <label>OMX Mainframe Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Mainframe_Consignee_ID__c</fullName>
        <description>OfficeMax Consignee id (site). Field: n_cnsgne</description>
        <label>OMX Mainframe Consignee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Mainframe_National_Acct_Number__c</fullName>
        <description>OfficeMax national acct #. Parent account# for main accounts tied to a national account. Field n_natl_cust</description>
        <label>OMX Mainframe National Acct #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Mainframe_Owning_Rep_Number__c</fullName>
        <description>the 4 digit rep # from OfficeMax mainframe who is the owner of the account</description>
        <externalId>true</externalId>
        <label>OMX Mainframe Owning Rep #</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Primary_Key__c</fullName>
        <externalId>true</externalId>
        <label>OMX Primary Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OMX_Tier_1_Type__c</fullName>
        <label>OMX Tier 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guy Brown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Contract_Percent__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Off Contract Percent - Default value = 5%</description>
        <label>Off Contract Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Off_Contract_Price_Code__c</fullName>
        <label>Off Contract Price Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Up</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Essentials_IMU_LY__c</fullName>
        <label>Office Essentials IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_IMU_TY__c</fullName>
        <label>Office Essentials IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_LY__c</fullName>
        <description>Filing Storage Sales Last Year</description>
        <inlineHelpText>Filing Storage Sales Last Year</inlineHelpText>
        <label>Office Essentials LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Last_Order__c</fullName>
        <label>Office Essentials Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Last_Order_amt__c</fullName>
        <label>Office Essentials Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Pot__c</fullName>
        <description>Filing Storage Potential</description>
        <inlineHelpText>Filing Storage Potential</inlineHelpText>
        <label>Office Essentials Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_TY__c</fullName>
        <description>Filing Storage Sales This Year</description>
        <inlineHelpText>Filing Storage Sales This Year</inlineHelpText>
        <label>Office Essentials TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Total_LY__c</fullName>
        <label>Office Essentials Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amt__c</fullName>
        <label>Opportunity Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt_Date__c</fullName>
        <defaultValue>DATE(1900,01,01)</defaultValue>
        <label>Opt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_in_Date__c</fullName>
        <label>Opt-in Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_out_Date__c</fullName>
        <label>Opt-out Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Party ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_Number__c</fullName>
        <label>Oracle Party Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_Site_ID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Party Site ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_Site_Number__c</fullName>
        <label>Oracle Party Site Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Month__c</fullName>
        <label>Orders-Current Month</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Qtr__c</fullName>
        <label>Orders-Current Qtr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Yr__c</fullName>
        <label>Orders-Current Yr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Month__c</fullName>
        <label>Orders-Last Month</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Qtr__c</fullName>
        <label>Orders-Last Qtr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Yr__c</fullName>
        <label>Orders-Last Yr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Number_of_Locations__c</fullName>
        <description>Org Number of locations - Default = 0</description>
        <label>Number of Sites</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_WCW_Count_DB__c</fullName>
        <description>Total Org White Collar Workers - Firmographic Append</description>
        <label>Org WCW Count - D&amp;B</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_WCW_Count_Rep__c</fullName>
        <defaultValue>0</defaultValue>
        <label>White Collar Workers</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Original Account ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_System__c</fullName>
        <label>Original System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Duplicate_Check_ownerid__c</fullName>
        <label>AccountOverride Duplicate Check ownerid</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_IMU_LY__c</fullName>
        <label>Paper IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_IMU_TY__c</fullName>
        <label>Paper IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_LY__c</fullName>
        <description>Paper - Last Year Sales</description>
        <inlineHelpText>Paper - Last Year Sales</inlineHelpText>
        <label>Paper LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Last_Order__c</fullName>
        <label>Paper Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paper_Last_Order_amt__c</fullName>
        <label>Paper Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Pot__c</fullName>
        <description>Paper Potential</description>
        <inlineHelpText>Paper Potential</inlineHelpText>
        <label>Paper Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_TY__c</fullName>
        <description>Paper Sales This Year</description>
        <inlineHelpText>Paper Sales This Year</inlineHelpText>
        <label>Paper TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Total_LY__c</fullName>
        <label>Paper Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Account Extensions (Parent Account)</relationshipLabel>
        <relationshipName>Account_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Account Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <description>Phone Extension</description>
        <label>Phone Ext.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition_Reason__c</fullName>
        <label>Pot Disposition Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition__c</fullName>
        <label>Pot Disposition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <description>Potential Amt - this is what the data warehouse tells us the potential is based on the models minus their real spend.</description>
        <label>Potential Amt</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_DeDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential DeDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate_of_ID__c</fullName>
        <label>Potential Duplicate of ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Printers__c</fullName>
        <label># Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predictive_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predictive Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_ID__c</fullName>
        <label>Previous Owner ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_As__c</fullName>
        <label>Price As</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Flip_Effective_Date__c</fullName>
        <label>Pricing Flip Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_template_cd__c</fullName>
        <label>Pricing Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Buying_Group__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>171 Core (Puerto Rico)</fullName>
                </value>
                <value>
                    <fullName>91 Core (Puerto Rico)</fullName>
                </value>
                <value>
                    <fullName>ABA Member Advantage</fullName>
                </value>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Allied Business Network</fullName>
                </value>
                <value>
                    <fullName>Allied Business Network - Business Advantage Plus</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Attach to Parent Pricing</fullName>
                </value>
                <value>
                    <fullName>Avendra LLC</fullName>
                </value>
                <value>
                    <fullName>Benefits Chamber Program</fullName>
                </value>
                <value>
                    <fullName>BENEFITS CORP FRESNO</fullName>
                </value>
                <value>
                    <fullName>BENEFITS CORP LAS VEGAS</fullName>
                </value>
                <value>
                    <fullName>BENEFITS CORP SAN DIEGO</fullName>
                </value>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>Canadian Pricing</fullName>
                </value>
                <value>
                    <fullName>CARE PURCHASING</fullName>
                </value>
                <value>
                    <fullName>CHEVROLET DIVISION</fullName>
                </value>
                <value>
                    <fullName>CHURCH SUPPLIES &amp; SVC INC</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Congress</fullName>
                </value>
                <value>
                    <fullName>Custom - Pricing</fullName>
                </value>
                <value>
                    <fullName>Custom - Self Service</fullName>
                </value>
                <value>
                    <fullName>Custom - WRF</fullName>
                </value>
                <value>
                    <fullName>CWPG - CommonWealth Purchasing Group</fullName>
                </value>
                <value>
                    <fullName>CWPG - Massachusetts League</fullName>
                </value>
                <value>
                    <fullName>CWPG - Medigroup Physician Services</fullName>
                </value>
                <value>
                    <fullName>CWPG - Pediatrix Obstetrix Medical Group</fullName>
                </value>
                <value>
                    <fullName>DetroitRC - NCG</fullName>
                </value>
                <value>
                    <fullName>DHHS</fullName>
                </value>
                <value>
                    <fullName>Distribution Solutions Inc (DSI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <label>Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <inlineHelpText>Use this field to identify a primary competitor especially when the prospect is under contract with that competitor.  Also complete Competitor Contract Date in those cases.</inlineHelpText>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Alabama Office Supply</fullName>
                </value>
                <value>
                    <fullName>American Paper and Twine</fullName>
                </value>
                <value>
                    <fullName>Apex Office Supply</fullName>
                </value>
                <value>
                    <fullName>Artlite</fullName>
                </value>
                <value>
                    <fullName>A to Z Office Supply</fullName>
                </value>
                <value>
                    <fullName>Barefield’s Office Supply</fullName>
                </value>
                <value>
                    <fullName>Bertelsons</fullName>
                </value>
                <value>
                    <fullName>Best Office Supply</fullName>
                </value>
                <value>
                    <fullName>Boise Cascade</fullName>
                </value>
                <value>
                    <fullName>Bull Dog</fullName>
                </value>
                <value>
                    <fullName>Capitol Office Supply</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Caxtons</fullName>
                </value>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Chuckals</fullName>
                </value>
                <value>
                    <fullName>Church and Stagg</fullName>
                </value>
                <value>
                    <fullName>Complete Office Supply</fullName>
                </value>
                <value>
                    <fullName>Convenience Office Supply</fullName>
                </value>
                <value>
                    <fullName>Corporate Express</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>Detroit Pencil Company</fullName>
                </value>
                <value>
                    <fullName>El Paso Office Supply</fullName>
                </value>
                <value>
                    <fullName>Emerald Office Supplies</fullName>
                </value>
                <value>
                    <fullName>EON</fullName>
                </value>
                <value>
                    <fullName>Executive Office Supply</fullName>
                </value>
                <value>
                    <fullName>Friends</fullName>
                </value>
                <value>
                    <fullName>Garrigan’s Office Products</fullName>
                </value>
                <value>
                    <fullName>Gateway Printing/Jones &amp; Cook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <description>This field is used to identify the difference between the MPS Prospect and Others</description>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CPD-Print</fullName>
                </value>
                <value>
                    <fullName>CPD-Promo</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Filing &amp; Binding</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Forms</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Office Essentials</fullName>
                </value>
                <value>
                    <fullName>Writing &amp; Drafting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Site_ID__c</fullName>
        <label>Primary Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Creation_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect Creation Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY_IMU__c</fullName>
        <label>QTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY__c</fullName>
        <description>Quarter Sales - Last Year</description>
        <inlineHelpText>Quarter Sales - Last Year</inlineHelpText>
        <label>QTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY_IMU__c</fullName>
        <label>QTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY__c</fullName>
        <description>Quarter - This Year</description>
        <inlineHelpText>Quarter - This Year</inlineHelpText>
        <label>QTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_LY_IMU__c</fullName>
        <label>Quarter LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_LY__c</fullName>
        <label>Quarter LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSD_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSD1_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Request_Enabled__c</fullName>
        <label>Recurring Request Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Dormants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_OD_Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related OD Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Account Extensions (Related OD Account Extension)</relationshipLabel>
        <relationshipName>MPS_Dormant_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_OD_Dormant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related OD Dormant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Dormants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Parent_Account__c</fullName>
        <label>Related Pricing Template Customer ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>